<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp"
  android:background="@drawable/radial_gradient">

  <!-- APOD Title -->
  <TextView
    android:id="@+id/apod_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/apod_title"
    android:textSize="18sp"
    android:textStyle="bold"/>

  <TextView
    android:id="@+id/space_seek_logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/space_seek_logo"
    android:textSize="22sp"
    android:textStyle="bold"
    android:gravity="center"
    android:layout_marginTop="8dp"/>

  <!-- APOD Image -->
  <ImageView
    android:id="@+id/apod_image"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:scaleType="centerCrop"
    android:contentDescription="@string/apod_image_description"
    android:layout_gravity="center"/>
  <!-- TODO 3/27/25: Move image to center of screen & enlarge -->

  <!-- Random APOD Button -->
  <!-- TODO 3/27/25: Constraints to middle bottom, directly under apod image view AS DISPLAYED IN WIREFRAME, change color, round shape -->
  <Button
    android:id="@+id/random_apod_button"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/rounded_button"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp"
    android:text="@string/random_apod"
    android:textColor="@color/button_text_color"/>


  <!-- Additional Feature Buttons -->
  <LinearLayout
    android:id="@+id/feature_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:gravity="center"
    android:orientation="horizontal">
    <!--TODO 3/27/25: placeholder to use as needed-->

    <ImageButton
      android:id="@+id/favorite_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/favorite_button_description"
      android:src="@drawable/ic_favorite"/>
    <!--TODO 3/27/25: Reference drawables for favorite button-->

    <ImageButton
      android:id="@+id/date_selection_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/date_selection_button_description"
      android:src="@drawable/ic_date_selection"/>
    <!--TODO 3/27/25: Reference drawables to select date & share button-->
    <ImageButton
      android:id="@+id/share_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="8dp"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/share_button_description"
      android:src="@drawable/ic_share"/>
  </LinearLayout>

</LinearLayout>